--- a/src/index.css
+++ b/src/index.css
@@ -189,6 +189,29 @@ hr {
   font-size: medium;
   margin: 0.5rem 0 0.5rem 0;
 }
+
+.swiper {
+  width: 100%;
+  height: 100%;
+}
+
+.swiper-slide {
+  text-align: center; 
+  font-size: 18px;
+  background: #fff;
+
+  /* Center slide text vertically */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.swiper-slide img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
 /* Here section use for made layout and design responsive */
 @media (max-width: 375px) {
   .fullname {
